--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="instruction-card">
                         <h3>🎮 Rules</h3>
                         <ul>
-                            <li>You have <strong>6 attempts</strong> to find all coefficients</li>
+                            <li>You have <strong>4 attempts</strong> to find all coefficients</li>
                             <li>Each coefficient is a <strong>whole number from 0 to 9</strong></li>
                             <li>Use the interactive graph to understand the function's behavior</li>
                             <li>Color feedback guides your next guess</li>
@@ -137,7 +137,7 @@
                     <div class="info-grid">
                         <div class="info-item">
                             <span class="info-label">Target:</span>
-                            <span class="info-value">Find coefficients A to E</span>
+                            <span class="info-value">Find coef. A to E</span>
                         </div>
                         <div class="info-item">
                             <span class="info-label">Range:</span>
@@ -157,7 +157,7 @@
                     <div class="attempt-counter">
                         <span class="counter-text">Attempt</span>
                         <span class="counter-number" id="attempt-counter">0</span>
-                        <span class="counter-total">/6</span>
+                        <span class="counter-total">/4</span>
                     </div>
                 </div>
 
@@ -185,20 +185,6 @@
                         <div class="cell empty"></div>
                     </div>
                     <div class="attempt-row" data-row="3">
-                        <div class="cell empty"></div>
-                        <div class="cell empty"></div>
-                        <div class="cell empty"></div>
-                        <div class="cell empty"></div>
-                        <div class="cell empty"></div>
-                    </div>
-                    <div class="attempt-row" data-row="4">
-                        <div class="cell empty"></div>
-                        <div class="cell empty"></div>
-                        <div class="cell empty"></div>
-                        <div class="cell empty"></div>
-                        <div class="cell empty"></div>
-                    </div>
-                    <div class="attempt-row" data-row="5">
                         <div class="cell empty"></div>
                         <div class="cell empty"></div>
                         <div class="cell empty"></div>
