--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                             <li>You have <strong>4 attempts</strong> to find all coefficients</li>
                             <li>Each coefficient is a <strong>whole number from 0 to 9</strong></li>
                             <li>Use the interactive graph to understand the function's behavior</li>
+                            <li><strong>Double-tap</strong> the graph to reset the zoom</li>
                             <li>Color feedback guides your next guess</li>
                         </ul>
                     </div>
