--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     <label for="level-select" class="level-label">Difficulty</label>
                     <div class="select-wrapper">
                         <select id="level-select" class="level-dropdown">
-                            <option value="noob" data-emoji="🌱">BEGINNER</option>
+                            <option value="noob" data-emoji="🌱">NOOB</option>
                             <option value="amateur" selected data-emoji="⭐">AMATEUR</option>
                             <option value="medium" data-emoji="🔥">MEDIUM</option>
                             <option value="pro" data-emoji="💎">PRO</option>
-                            <option value="nerd" data-emoji="🧠">EXPERT</option>
+                            <option value="nerd" data-emoji="🧠">NERD</option>
                         </select>
                         <div class="select-arrow">▼</div>
                     </div>
